# pdbtoheader

./: CMakeLists.txt  Readme.md  ida-plugin.sln
dependencies/: CMakeLists.txt
ida-plugin/: ida-plugin.vcxproj  ida-plugin.vcxproj.filters  pluginmain.cpp
src/: CMakeLists.txt  dllmain.cpp  pluginmain.cpp
