
add_library(pdbtoheader64 SHARED dllmain.cpp pluginmain.cpp )

SET_TARGET_PROPERTIES(pdbtoheader64 PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${IDA_INSTALL_DIR}/plugins/)
SET_TARGET_PROPERTIES(pdbtoheader64 PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${IDA_INSTALL_DIR}/plugins/)

#下面这个会自动后面加/debug或者/release的
#SET_TARGET_PROPERTIES(pdbtoheader64 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${IDA_INSTALL_DIR}/plugins/)


#DEBUG模式下启用DEBUG宏
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")

